fixed aspects based on Michelles feedback

--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@ class ExperimentScene extends Phaser.Scene {
         let ii = 0
         for (let trial of this.trialPairs) {
             await this.runColorTask(trial, ii);
-            if (ii==0) {
-                await this.playSoundAndWait(this.sounds.aufzeichnung30)
-            }// else if (ii==4) {
+            //if (ii==0) {
+             ///   await this.playSoundAndWait(this.sounds.aufzeichnung30)
+            //}// else if (ii==4) {
               //  await this.playSoundAndWait(this.sounds.aufzeichnung31)
 
             //}
